fix z-index for lightense-image

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -64,7 +64,6 @@ blockquote, dl, ol, p, ul {
 }
 
 .site-main {
-    z-index: 100;
     flex-grow: 1;
 }
 
